// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Codebox Basic 1`] = `
<div class="ui-example-child ui-example-child-codebox ui-example-child-codebox-0">
  <div class="ui-codebox-wrapper">
    <div class="ui-codebox"><span class="ui-codebox-box is-filled">
            1
           <!----></span><span class="ui-codebox-box is-filled">
            2
           <!----></span><span class="ui-codebox-box is-filled">
            3
           <!----></span><span class="ui-codebox-box is-filled">
            4
           <!----></span></div>
    <form action="" style="display:none;"><input type="text" maxlength="4" value="1234" class="ui-codebox-input"></form>
    <div class="ui-number-keyboard ui-codebox-keyboard">
      <div class="ui-popup bottom" style="display:none;">
        <div name="ui-mask-fade" class="ui-popup-mask" style="display:none;"></div>
        <div name="ui-slide-up" class="ui-popup-box ui-slide-up" style="display:none;">
          <!---->
          <div class="ui-number-keyboard-container simple">
            <div class="keyboard-number">
              <ul class="keyboard-number-list">
                <li class="keyboard-number-item"><span>1</span></li>
                <li class="keyboard-number-item"><span>2</span></li>
                <li class="keyboard-number-item"><span>3</span></li>
                <li class="keyboard-number-item"><span>4</span></li>
                <li class="keyboard-number-item"><span>5</span></li>
                <li class="keyboard-number-item"><span>6</span></li>
                <li class="keyboard-number-item"><span>7</span></li>
                <li class="keyboard-number-item"><span>8</span></li>
                <li class="keyboard-number-item"><span>9</span></li>
                <li class="keyboard-number-item no-bg"></li>
                <li class="keyboard-number-item"><span>0</span></li>
                <li class="keyboard-number-item no-bg delete"><span></span></li>
              </ul>
            </div>
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Codebox Character mask 1`] = `
<div class="ui-example-child ui-example-child-codebox ui-example-child-codebox-1">
  <div class="ui-codebox-wrapper">
    <div class="ui-codebox"><span class="ui-codebox-box is-filled"><i class="ui-codebox-dot"></i> <!----></span><span class="ui-codebox-box is-filled"><i class="ui-codebox-dot"></i> <!----></span><span class="ui-codebox-box is-filled"><i class="ui-codebox-dot"></i> <!----></span><span class="ui-codebox-box is-filled"><i class="ui-codebox-dot"></i> <!----></span><span class="ui-codebox-box"><!----> <!----></span><span class="ui-codebox-box"><!----> <!----></span></div>
    <form action="" style="display:none;"><input type="password" maxlength="6" value="1234" class="ui-codebox-input"></form>
    <div class="ui-number-keyboard ui-codebox-keyboard">
      <div class="ui-popup bottom" style="display:none;">
        <div name="ui-mask-fade" class="ui-popup-mask" style="display:none;"></div>
        <div name="ui-slide-up" class="ui-popup-box ui-slide-up" style="display:none;">
          <!---->
          <div class="ui-number-keyboard-container simple">
            <div class="keyboard-number">
              <ul class="keyboard-number-list">
                <li class="keyboard-number-item"><span>1</span></li>
                <li class="keyboard-number-item"><span>2</span></li>
                <li class="keyboard-number-item"><span>3</span></li>
                <li class="keyboard-number-item"><span>4</span></li>
                <li class="keyboard-number-item"><span>5</span></li>
                <li class="keyboard-number-item"><span>6</span></li>
                <li class="keyboard-number-item"><span>7</span></li>
                <li class="keyboard-number-item"><span>8</span></li>
                <li class="keyboard-number-item"><span>9</span></li>
                <li class="keyboard-number-item no-bg"></li>
                <li class="keyboard-number-item"><span>0</span></li>
                <li class="keyboard-number-item no-bg delete"><span></span></li>
              </ul>
            </div>
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Codebox System keyboard 1`] = `
<div class="ui-example-child ui-example-child-codebox ui-example-child-codebox-3">
  <div class="ui-codebox-wrapper">
    <div class="ui-codebox"><input type="text" maxlength="-1" readonly="readonly" disabled="disabled" value="1234" class="ui-codebox-holder"></div>
    <form action=""><input type="text" maxlength="-1" value="1234" class="ui-codebox-input"></form>
    <div class="ui-number-keyboard ui-codebox-keyboard" style="display:none;">
      <div class="ui-popup bottom" style="display:none;">
        <div name="ui-mask-fade" class="ui-popup-mask" style="display:none;"></div>
        <div name="ui-slide-up" class="ui-popup-box ui-slide-up" style="display:none;">
          <!---->
          <div class="ui-number-keyboard-container professional">
            <div class="keyboard-number">
              <ul class="keyboard-number-list">
                <li class="keyboard-number-item"><span>1</span></li>
                <li class="keyboard-number-item"><span>2</span></li>
                <li class="keyboard-number-item"><span>3</span></li>
                <li class="keyboard-number-item"><span>4</span></li>
                <li class="keyboard-number-item"><span>5</span></li>
                <li class="keyboard-number-item"><span>6</span></li>
                <li class="keyboard-number-item"><span>7</span></li>
                <li class="keyboard-number-item"><span>8</span></li>
                <li class="keyboard-number-item"><span>9</span></li>
                <li class="keyboard-number-item"><span>.</span></li>
                <li class="keyboard-number-item"><span>0</span></li>
                <li class="keyboard-number-item slidedown"><span></span></li>
              </ul>
            </div>
            <div class="keyboard-operate">
              <ul class="keyboard-operate-list">
                <li class="keyboard-operate-item delete"><span></span></li>
                <li class="keyboard-operate-item confirm"><span>确定</span></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Codebox Unlimited length 1`] = `
<div class="ui-example-child ui-example-child-codebox ui-example-child-codebox-2">
  <div class="ui-codebox-wrapper">
    <div class="ui-codebox"><input type="text" maxlength="-1" readonly="readonly" disabled="disabled" value="1234" class="ui-codebox-holder"></div>
    <form action="" style="display:none;"><input type="text" maxlength="-1" value="1234" class="ui-codebox-input"></form>
    <div class="ui-number-keyboard ui-codebox-keyboard">
      <div class="ui-popup bottom" style="display:none;">
        <div name="ui-mask-fade" class="ui-popup-mask" style="display:none;"></div>
        <div name="ui-slide-up" class="ui-popup-box ui-slide-up" style="display:none;">
          <!---->
          <div class="ui-number-keyboard-container professional">
            <div class="keyboard-number">
              <ul class="keyboard-number-list">
                <li class="keyboard-number-item"><span>1</span></li>
                <li class="keyboard-number-item"><span>2</span></li>
                <li class="keyboard-number-item"><span>3</span></li>
                <li class="keyboard-number-item"><span>4</span></li>
                <li class="keyboard-number-item"><span>5</span></li>
                <li class="keyboard-number-item"><span>6</span></li>
                <li class="keyboard-number-item"><span>7</span></li>
                <li class="keyboard-number-item"><span>8</span></li>
                <li class="keyboard-number-item"><span>9</span></li>
                <li class="keyboard-number-item"><span>.</span></li>
                <li class="keyboard-number-item"><span>0</span></li>
                <li class="keyboard-number-item slidedown"><span></span></li>
              </ul>
            </div>
            <div class="keyboard-operate">
              <ul class="keyboard-operate-list">
                <li class="keyboard-operate-item delete"><span></span></li>
                <li class="keyboard-operate-item confirm"><span>确定</span></li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
